follower Car Image alignment Bug Fixed

--- a/resources/follower.css
+++ b/resources/follower.css
@@ -14,16 +14,16 @@ body {
   margin-bottom: 2%;
   background-size: 100%;
   background-position: center;
-  /* background-position-y: -55%; */
+  background-position-y: 170px;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    --webkit-appearance: none;
-    margin: 0;
+  --webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number]{
+input[type='number'] {
   --moz-appearance: textfield;
 }
 
@@ -40,9 +40,9 @@ input[type=number]{
   position: relative;
 }
 #btn {
-	display: flex;
-	justify-content: end;
-	align-items: center;
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 .admin {
   color: #00adb5;
@@ -170,7 +170,8 @@ select {
     height: 100vh;
     background-color: #222831;
     color: #eeeeee;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-image: url('hyrider.jpg');
     background-repeat: no-repeat;
     margin-bottom: 2%;
@@ -237,9 +238,11 @@ select {
     /* padding-right: 1%; */
   }
 
-  input[type="number"], select {
+  input[type='number'],
+  select {
     width: 78%;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 110%;
     /* padding: 10px 20px; */
     /* margin: 8px 0; */
@@ -252,7 +255,7 @@ select {
     height: 30px;
   }
 
-  .enter{
+  .enter {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
     height: 30px;
@@ -270,7 +273,7 @@ select {
     margin-left: 48px;
   }
 
-  #SMTopicElemet{
+  #SMTopicElemet {
     color: rgb(255, 255, 255);
     margin-left: 4%;
     text-decoration: underline;
@@ -278,13 +281,10 @@ select {
 }
 
 @media screen and (max-width: 768px) {
-  
 }
 
 @media screen and (max-width: 1024px) {
-  
 }
 
 @media screen and (max-width: 1280px) {
-  
 }
